--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@ionic/react-router": "^8.5.0",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
+    "bootstrap": "^5.3.3",
     "ionicons": "^7.4.0",
+    "nodemon": "^3.1.9",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-router": "^5.3.4",
